fixed annoying rhs overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,7 @@
 body {
   box-sizing: border-box;
-  /*max-width: 100vw;*/
   font-size: 18px;
   color: #494c4e;
-  /*font-family: 'Oxygen', sans-serif;
-  letter-spacing: 1px;*/
-  /*font-family: 'Open Sans', sans-serif;*/
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -18,15 +14,6 @@ h1 {
   color: #0f0f0f;
   letter-spacing: 6px;
   opacity: 1;
-}
-
-h2 {
-  margin-left: 50px;
-  color: #07058e;
-  font-size: 60px;
-  font-style: italic;
-  font-weight: bold;
-  font-family: 'Lobster Two', cursive;
 }
 
 h3 {
@@ -48,13 +35,12 @@ p {
   background: url("/assets/bella_profile.jpg");
   background-size: cover;
   height: 100vh;
-  /*max-width: 100vw;*/
 }
 
 #welcome-text {
   height: 100vh;
   text-align: center;
-  background: rgba(204, 204, 204, 0.5);
+  background: rgba(204, 204, 204, 0.55);
 }
 
 #arrow {
@@ -124,8 +110,7 @@ li a {
 }
 
 #contact {
-  margin-bottom: 15px;
-  width: 100vw;
+  margin-bottom: 15px; 
   text-align: center;
 }
 
